# total-recall

./: API_TESTING_GUIDE.md  PHASE_2_COMPLETE.md  README.md  agents.md  impl_plan_v2.md  pyproject.toml
apps/backend/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_config.py
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 42ed0bbe28b6_create_journal_entries_table.py  dc781efc8da7_add_status_column_to_journal_entries.py  f0e057e3d644_create_todos_table.py  fb3130a1130c_create_journal_entries_table.py
apps/backend/app/: celery.py  main.py
apps/backend/app/api/v1/: __init__.py  dependencies.py
apps/backend/app/api/v1/endpoints/: auth.py  calendar.py  chat.py  graph.py  journal.py
apps/backend/app/core/: config.py  cosdata_client.py  database.py  gemini_client.py  prompts.py  security.py  utils.py
apps/backend/app/models/: __init__.py  auth.py  base.py  graph.py  journal_entry.py  todo.py
apps/backend/app/schemas/: calendar.py  chat.py  extraction.py  graph.py  journal_entry.py  todo.py  user.py
apps/backend/app/services/: __init__.py  ai_service.py  auth_service.py  calendar_service.py  chat_service.py  graph_service.py  journal_service.py  todo_service.py  vector_service.py
apps/backend/app/tasks/: ai_tasks.py
apps/backend/src/: main.py
apps/backend/src/api/: v1.py
apps/backend/src/core/: auth.py  config.py  cosdata.py  neo4j.py  postgres.py
apps/backend/src/services/: brain.py  graph.py  vector.py
apps/web/: .env.example  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/dashboard/: dashboard-providers.tsx  journal-entry-client.tsx  layout.tsx  page.tsx
apps/web/components/: login-form.tsx
apps/web/hooks/: use-chat.ts  use-journal.ts  use-todos.ts
apps/web/lib/: auth-client.ts  auth.ts  google-calendar.ts
infra/: Dockerfile.cosdata  cosdata-init.sh  docker-compose.yaml  entrypoint-cosdata.sh  init-cosdata.sh
scripts/: init_cosdata.py  init_cosdata_admin.py  init_db.py  verify_brain.py
(+48 files in other folders)
