[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "valkey>=6.1.1",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",
    "google-genai>=0.1.0",
    "neo4j>=5.14.0",
    "psycopg2-binary>=2.9.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "google-generativeai>=0.8.5",
    "cosdata-sdk==0.2.5",
    "celery>=5.6.0",
    "alembic>=1.17.2",
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "requests>=2.31.0",
    "asyncpg>=0.31.0",
    "cosdata-fastembed>=0.7.1",
    "neomodel>=6.0.0",
    "redis>=7.1.0",
    "cosdata-client>=0.2.2",
    "pyaudio>=0.2.14",
    "google-adk>=1.18.0",
]
